# Online-Text-Editor

./: README.md  client_handler.c  client_handler.h
Client/: Editor.sln
Client/Editor/: App.axaml  App.axaml.cs  Editor.csproj  MainWindow.xaml  MainWindow.xaml.cs  Paragraph.cs  Program.cs  SocketListener.cs
Client/Editor/Utilities/: DictionaryWordsHighlighter.cs  Paragraph.cs  ServerListener.cs  SocketListener.cs  SyncParagraphSending.cs
Client/Editor/ViewModels/: MainWindowViewModel.cs
Client/Editor/Views/: Demo.axaml  Demo.axaml.cs  Dictionary.axaml  Dictionary.axaml.cs  Editor.axaml  Editor.axaml.cs  FilePickerWindow.axaml  FilePickerWindow.axaml.cs  MainMenu.axaml  MainMenu.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
Editor/: Editor.sln
Server/: .clang-format  .gitignore  CMakeLists.txt  Makefile  activity_check_handler.c  activity_check_handler.h  client_file.txt  client_handler.c  client_handler.h  default_file.txt  example_file.txt  linked_list.c  linked_list.h  socekt_server.c  socket_server.c
Server/test/: CMakeLists.txt  test_linked_list_create_new_node.c  test_linked_list_create_node.c  test_linked_list_get_length.c  test_linked_list_init.c  test_linked_list_insert_after_node_number.c  test_linked_list_insert_after_tail.c  test_linked_list_insert_before_head.c  test_linked_list_remove_node.c
